fixed notecard user profile not showing issue and added disabled btn for normal popover

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -754,6 +754,7 @@ p {
 .notecard.mnemonic .notecardcontent {
   width: 100%;
   height: calc(100% - 100px);
+  min-height: 90px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
